Revision history for Perl extension Net::Ping::External.

In future Net::Ping::External may require perl 5.6.
If you use perl older than 5.6 - write to alexchorny[AT]gmail.com
and tell me what perl version do you use, why and will you need
newer versions of Net::Ping::External.

- Support Debian GNU/kFreeBSD

0.15 2014-04-12
- Better detect Windows ping under Cygwin
- Add ping output for test 2 if it fails
- Support MidnightBSD

0.14 2013-10-29
- trailing dot for unexistent host in test (Marcin Gryszkalis)
- SCO OpenServer added
- tests will not fail if nonexisting domain resolves
- detect Windows ping under Cygwin (Ben Bullock)

0.13 Dec 18 2008
- Small fixes in test
- Support of count param on RedHat-based systems and SuSE
- Other small changes

0.12 = 0.12_02 Feb 08 2007
0.12_02: Feb 01 2007
- Full path to ping specified on NetBSD.

0.12_01: Sep 07 2006
Alexandr Ciornii appointed as comaintainer by CPAN admins
- Updated e-mails to point to me.
- Fixed ping for Cygwin, national Windows and Windows+ppt
- Added more information for report
- test.pl returns correct exit code (previously it always passed)

0.11: Feb 11 2003
- Fixed a problem that caused incorrect results in a lot of (and perhaps 
  all?) versions of Windows.  
- Also fixed the _ping_bsd function to actually call ping and return a 
  value (oops).
- Peter N. Lewis submitted a _ping_darwin function that will hopefully 
  work on all versions of Mac OS X.
- Changed the test suite to only implore people to send me test results 
  if there were any failures.
- Test suite can now run non-interactively, as it doesn't prompt the 
  user to hit enter.

0.10: Nov 10 2001
- Fixed unrecognized characters in _ping_freebsd that caused the
  module to die on some systems. (Thanks to Jonathan Stowe for the
  patch.)

0.09: Nov 10 2001
- Some additions and revisions to POD documentation.
- Further fixes to Win32 support, by Randy Moore.
- Fixes for FreeBSD support, by Marc-Andre Dumas.

0.08: Sep 30 2001